--- a/OnlineFraudDetection.ipynb
+++ b/OnlineFraudDetection.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "50fce419-3f3c-4cab-a65f-e9ced8e40b86",
    "metadata": {},
    "outputs": [],
@@ -70,17 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "fde4c23b-c2f5-47f8-9e8c-730c9b4752ae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('archive//PS_20174392719_1491204439457_log.csv')"
+    "data = pd.read_csv('artifacts//data_ingestion//Raw_data.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "acbef9db-7395-47a4-a352-9d9022cd1f3d",
    "metadata": {},
    "outputs": [
@@ -209,7 +209,7 @@
        "4  M1230701703             0.0             0.0        0               0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -781,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 5,
    "id": "e88324f3-a362-4110-8140-1c9ab7a83c7d",
    "metadata": {},
    "outputs": [],
@@ -791,7 +791,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 6,
+   "id": "40782512",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['PAYMENT', 'TRANSFER', 'CASH_OUT', 'DEBIT', 'CASH_IN'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['type'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e193bb91",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     PAYMENT\n",
+       "1     PAYMENT\n",
+       "2    TRANSFER\n",
+       "3    CASH_OUT\n",
+       "4     PAYMENT\n",
+       "Name: type, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.type.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "dbdaf603-7094-43a0-bc73-f132fe8ce085",
    "metadata": {},
    "outputs": [],
@@ -801,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "4fb903bd-4410-4cbf-9578-6d7dfe7635fb",
    "metadata": {},
    "outputs": [],
@@ -811,11 +859,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "3c79e9c9-8baa-4546-b1ba-0e62cde3bda4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    3\n",
+       "1    3\n",
+       "2    4\n",
+       "3    1\n",
+       "4    3\n",
+       "Name: type, dtype: int32"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.type.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "14ad539f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3, 4, 1, 2, 0])"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.type.unique()"
+   ]
   },
   {
    "cell_type": "code",
@@ -1477,7 +1564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
