--- a/OnlineFraudDetection.ipynb
+++ b/OnlineFraudDetection.ipynb
@@ -618,11 +618,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "43690b1c-16c8-4f9a-98c2-71bcdf374dce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "isFraud\n",
+       "0    6354407\n",
+       "1       8213\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.isFraud.value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
